# win-precise-time

./: .gitignore  .readthedocs.yml  CMakeLists.txt  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yml  wheels.yml
doc/: api.rst  conf.py  doc-requirements.txt  examples.rst  index.rst
examples/: soft_realtime.py  timestamp_resolution.py
src/win_precise_time/: __init__.py  _t.c  _t.h  _t.pyi
tests/: test_precise_time.py
