[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools >= 61.0", "wheel"]

[project]
name = "win-precise-time"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = [
  "Windows", 
  "time",
  "sleep",
  "GetSystemTimePreciseAsFileTime",
  "SetWaitableTimerEx",
  "CREATE_WAITABLE_TIMER_HIGH_RESOLUTION",
]
authors = [
  { name = "Artur Drogunow", email = "artur.drogunow@zf.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/zariiii9003/win-precise-time#readme"
Issues = "https://github.com/zariiii9003/win-precise-time/issues"
Source = "https://github.com/zariiii9003/win-precise-time"
Homepage = "https://github.com/zariiii9003/win-precise-time"

[tool.setuptools.dynamic]
version = {attr = "win_precise_time.__version__"}

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
build-frontend = "build"

# Disable until https://foss.heptapod.net/pypy/pypy/-/issues/3770 is resolved
skip = "pp39-win_amd64"