[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "win-precise-time"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = [
  "Windows", 
  "time",
  "sleep",
  "GetSystemTimePreciseAsFileTime",
  "SetWaitableTimerEx",
  "CREATE_WAITABLE_TIMER_HIGH_RESOLUTION",
]
authors = [
  { name = "Artur Drogunow", email = "artur.drogunow@zf.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://win-precise-time.readthedocs.io/en/latest/"
Issues = "https://github.com/zariiii9003/win-precise-time/issues"
Source = "https://github.com/zariiii9003/win-precise-time"
Homepage = "https://github.com/zariiii9003/win-precise-time"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/win_precise_time/_version.py"]
wheel.packages = ["src/win_precise_time"]

[tool.setuptools_scm]  # Section required
write_to = "src/win_precise_time/_version.py"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
build-frontend = "build"
skip = "pp*"